<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate_bmi_button">Calculate BMI</string>
    <string name="your_age">Your Age</string>
    <string name="your_weight_kgs">Your Weight(kgs)</string>
    <string name="your_height_cms">Your Height</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_age">Enter Age</string>
    <string name="cms_inches">Cms/Inches</string>
    <string name="bmi_result_text">Your Body Mass Index is :</string>
    <string name="bmi_result">BMI</string>
    <string name="check_your_bmi_desc">Check your BMI</string>
    <string name="this_button_calculates_bmi">This button calculates BMI</string>
    <string name="otp_activity_name">android-otp-vertification</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_one_time_password_on_this_mobile_number">We will send you an One Time Password on this mobile number</string>
    <string name="_84">+91 - </string>
    <string name="_123456789">123456789</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="diet_tip_1">Diet Tip 1</string>
    <string name="diet_tip_2">Diet Tip 2</string>
    <string name="name">Name</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="diet_tip_1">Diet Tip 1</string>
    <string name="diet_tip_2">Diet Tip 2</string>
</resources>