<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="2dp"
    android:background="@color/design_default_color_on_primary">


    <!--Given below the three textviews are for the user guidance for in put of age, height
    adn weight variables respectively-->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="285dp"
        android:text="@string/enter_age"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="177dp"
        android:layout_marginEnd="285dp"
        android:text="@string/enter_height"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--This switch given below is for user to change the height input into cms/inches-->

    <!--Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:elegantTextHeight="true"
        android:text="@string/cms_inches"
        app:layout_constraintBottom_toTopOf="@+id/user_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_height"
        app:layout_constraintTop_toBottomOf="@+id/user_age" /-->

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch1"
        android:layout_width="127dp"
        android:layout_height="59dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:elegantTextHeight="true"
        android:text="@string/cms_inches"
        app:layout_constraintBottom_toTopOf="@+id/user_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_height"
        app:layout_constraintTop_toBottomOf="@+id/user_age"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="285dp"
        android:text="@string/enter_weight"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Given Below are the input boxes of the variables age,height and weight -->

    <!--com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_height"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="132dp"
        android:hint="@string/your_height_cms"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_height"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="137dp"
        android:hint="@string/your_height_cms"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_weight"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/your_weight_kgs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_weight"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/your_weight_kgs"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <!--com.google.android.material.textfield.TextInputEditText
        android:id="@+id/user_age"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/your_age"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_age"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/your_age"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <!--This is the calculate bmi button -->

    <!--this textview below creates the bmi text value-->

    <!--this text view given below is for the display of the reslut bmi-->

    <TextView
        android:id="@+id/result_message"
        android:layout_width="278dp"
        android:layout_height="35dp"
        android:text="@string/bmi_result_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/bmi_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_button"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/bmi_result"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--This is a progress bar for seeking the bmi on a meter-->

    <!--Button
        android:id="@+id/result_buton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->
    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="204dp"
        android:layout_height="51dp"
        android:layout_marginBottom="225dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/result_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/pink1"
        android:elevation="60dp"
        android:text="@string/calculate_bmi_button"
        android:textColor="@color/pink_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/dietTipsScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/dietTipsLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!--Image view for diet tip images-->
            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                app:srcCompat="@drawable/diet_chart"
                android:contentDescription="@string/diet_tip_1" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/diet_tip_2" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/diet_tip_2" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>