<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

  <androidx.appcompat.widget.AppCompatTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Register Now"
      android:textSize="40dp"
      android:textStyle="bold"

      app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/linearLayoutCompat"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Name"
          android:textSize="24dp"
          android:textStyle="bold"

          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/name_edit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:paddingHorizontal="2dp"
          android:ems="13"
          android:inputType="text"
          android:imeOptions="actionDone"
          />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Age"
          android:textSize="24dp"
          android:textStyle="bold" />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/age_edit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="3dp"
          android:paddingHorizontal="2dp"
          android:ems="13"
          android:imeOptions="actionDone"
          android:inputType="number"
          />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <androidx.appcompat.widget.AppCompatTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Gender"
          android:textSize="24dp"
          android:textStyle="bold" />

      <RadioGroup
          android:id="@+id/gender_radio"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal"
          android:layout_weight="2"
          android:layout_margin="5dp"
          >
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/female"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="20dp"
            />
      </RadioGroup>


    </LinearLayout>


  </androidx.appcompat.widget.LinearLayoutCompat>

  <Button
      android:id="@+id/register_btn"
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:padding="2px"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
      android:paddingHorizontal="10dp"
      android:paddingVertical="3dp"
      android:hint="REGISTER"
      android:textColorHint="@color/white"
      android:textSize="20dp"

      />
  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
      />
</androidx.constraintlayout.widget.ConstraintLayout>